btm margin added

--- a/src/app/side-nav/side-nav.component.html
+++ b/src/app/side-nav/side-nav.component.html
@@ -3,6 +3,9 @@
     <img class="logo" src="/secondCCM.png" alt="Logo" />
   </div>
   <div>
-    <input type="text" placeholder="Suchen">
+    <input type="text" placeholder="Suchen" />
+  </div>
+  <div>
+    <span>Für dich</span>
   </div>
 </section>
