--- a/src/app/side-nav/side-nav.component.scss
+++ b/src/app/side-nav/side-nav.component.scss
@@ -5,8 +5,11 @@ section {
   background-color: #bfefd9;
 }
 
+div {
+  margin-bottom: 8px;
+}
+
 .logo-container {
-    margin-bottom: 8px;
   .logo {
     height: 56px;
   }
