--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,21 +1,21 @@
-*{
-    margin: 0;
-    box-sizing: border-box;
-    border: none;
+* {
+  margin: 0;
+  box-sizing: border-box;
+  border: none;
 }
 
 body {
-    background-color: #FEE8C3;
+  background-color: #fee8c3;
 }
 
-input{
-    height: 32px;
-    width: 100%;
-    border-radius: 100px;
-    padding-inline: 16px;
-    font-size: 16px;
-    &:focus{
-        border: 1px solid #00000050;
-        outline-style: none;
-    }
+input {
+  height: 32px;
+  width: 100%;
+  border-radius: 100px;
+  padding-inline: 16px;
+  font-size: 16px;
+  &:focus {
+    border: 1px solid #00000050;
+    outline-style: none;
+  }
 }
