added main content and assets

--- a/src/app/side-nav/side-nav.component.html
+++ b/src/app/side-nav/side-nav.component.html
@@ -1,6 +1,10 @@
 <section>
   <div class="logo-container">
     <img class="logo" src="/secondCCM.png" alt="Logo" />
+    <span>
+      <h1>Second</h1>
+      <h2>Children's clothing & more</h2>
+    </span>
   </div>
   <div>
     <input type="text" placeholder="Suchen" />
