added slide effect

--- a/src/app/pic-slide/pic-slide.component.html
+++ b/src/app/pic-slide/pic-slide.component.html
@@ -1,3 +1,9 @@
-<div>
-   <img src="" alt="">
+<div #sliderContainer class="slider-container">
+  <div
+    *ngFor="let img of images; let i = index"
+    class="slide"
+    [class.active]="i === currentIndex"
+  >
+    <img [src]="img" alt="Slide {{ i + 1 }}" />
+  </div>
 </div>
