updated slide show and btn

--- a/src/app/share-btn/share-btn.component.html
+++ b/src/app/share-btn/share-btn.component.html
@@ -1,6 +1,6 @@
 <div>
-    <button>
-        +
+    <button (click)="share()" [attr.data-index]="imageIndex">
+        + 
     </button>
     <span>Teilen</span>
 </div>
