--- a/src/app/pic-slide/pic-slide.component.html
+++ b/src/app/pic-slide/pic-slide.component.html
@@ -5,5 +5,6 @@
     [class.active]="i === currentIndex"
   >
     <img [src]="img" alt="Slide {{ i + 1 }}" />
+    <app-share-btn [imageIndex]="i"></app-share-btn>
   </div>
 </div>
