--- a/src/app/pic-slide/pic-slide.component.scss
+++ b/src/app/pic-slide/pic-slide.component.scss
@@ -5,9 +5,12 @@
   scroll-snap-type: y mandatory;
   scrollbar-width: none;
   padding: 0px 160px;
+
 }
 
 .slide {
+  position: relative;
+
   width: 100%;
   height: 100%;
   display: flex;
@@ -15,6 +18,8 @@
   justify-content: center;
   scroll-snap-align: start;
   transition: opacity 0.5s ease-in-out;
+  background-color: black;
+  border-radius: 16px;
 }
 
 .slide img {
@@ -25,4 +30,10 @@
 
 .slide:not(.active) {
   opacity: 0.7;
+}
+
+app-share-btn{
+  position: absolute;
+  bottom: 56px;
+  right: -100px;
 }
