--- a/src/app/side-nav/side-nav.component.html
+++ b/src/app/side-nav/side-nav.component.html
@@ -9,7 +9,13 @@
   <div>
     <input type="text" placeholder="Suchen" />
   </div>
-  <div>
+  <div class="sideNav">
     <span>Für dich</span>
+  </div>
+  <div class="sideNav">
+    <span>Favoriten</span>
+  </div>
+  <div class="sideNav">
+    <span>Deine Sales</span>
   </div>
 </section>
