--- a/src/app/side-nav/side-nav.component.scss
+++ b/src/app/side-nav/side-nav.component.scss
@@ -27,3 +27,12 @@ div {
     }
   }
 }
+
+.sideNav{
+  cursor: pointer;
+  border-bottom: 1px solid transparent;
+}
+
+.sideNav:hover{
+  border-bottom: 1px solid black;
+}
