added navigation & removed default

--- a/src/app/side-nav/side-nav.component.html
+++ b/src/app/side-nav/side-nav.component.html
@@ -9,13 +9,13 @@
   <div>
     <input type="text" placeholder="Suchen" />
   </div>
-  <div class="sideNav">
+  <div class="sideNav" (click)="navForYou()">
     <span>Für dich</span>
   </div>
-  <div class="sideNav">
+  <div class="sideNav" (click)="navFavorite()">
     <span>Favoriten</span>
   </div>
-  <div class="sideNav">
+  <div class="sideNav" (click)="navMysales()">
     <span>Deine Sales</span>
   </div>
 </section>
