--- a/src/app/pic-slide/pic-slide.component.scss
+++ b/src/app/pic-slide/pic-slide.component.scss
@@ -32,8 +32,12 @@
   opacity: 0.7;
 }
 
-app-share-btn{
+.btns{
   position: absolute;
   bottom: 56px;
   right: -100px;
-}
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 16px;
+  }
