--- a/src/app/favorite/favorite.component.html
+++ b/src/app/favorite/favorite.component.html
@@ -1,1 +1,9 @@
-<p>favorite works!</p>
+<section #sliderContainer class="slider-container">
+  <div
+    *ngFor="let img of images; let i = index"
+    class="slide"
+    [class.active]="i === currentIndex"
+  >
+    <img [src]="img" alt="Slide {{ i + 1 }}" />
+  </div>
+</section>
